--- a/lang/fi.json
+++ b/lang/fi.json
@@ -162,10 +162,10 @@
         "TrackAGoal": "Seuraa tavoitetta",
         "TrackingCode": "Seurantakoodi",
         "TrustedHostConfirm": "Haluatko varmasti vaihtaa luotettua Piwikin konenimeä?",
-        "TrustedHostSettings": "Luotettu Piwik Isäntänimi",
+        "TrustedHostSettings": "Luotettu Piwik-palvelimen osoite",
         "UpdateSettings": "Päivitysasetukset",
         "UseCustomLogo": "Käytä kustomoitua logoa",
-        "ValidPiwikHostname": "Pätevä Piwik Isäntänimi",
+        "ValidPiwikHostname": "Voimassaoleva Piwikin konenimi",
         "WithOptionalRevenue": "valinnaisten tuottojen kanssa",
         "YouAreOptedIn": "Olet mukana seurannassa.",
         "YouAreOptedOut": "Et ole mukana seurannassa.",
@@ -261,7 +261,7 @@
         "EnjoyAnotherLookAndFeelOfThemes": "Nauti uudesta lookista",
         "FeaturedPlugin": "Valittu liitännäinen",
         "GetEarlyAccessForPaidPlugins": "Huomio: kaikki liitännäiset ovat tällä hetkellä ilmaisia; tulevaisuudessa sallimme maksulliset liitännäiset kauppatorilla (%sota yhteyttä%s saadaksesi aikainen pääsy).",
-        "GetNewFunctionality": "Saa uutta toimivuutta",
+        "GetNewFunctionality": "Hae uutta toimivuutta",
         "History": "Historia",
         "Inactive": "Ei käytössä",
         "InfoPluginUpdateIsRecommended": "Päivitä liitännäisesi nyt hyötyäksesi uusimmista parannuksista.",
@@ -300,7 +300,7 @@
         "PluginVersionInfo": "%1$s %2$s:sta",
         "PluginWebsite": "Liitännäissivu",
         "Screenshots": "Ruudunkaappaukset",
-        "SortByAlpha": "alfa",
+        "SortByAlpha": "alpha",
         "SortByNewest": "uusin",
         "SortByPopular": "suosittu",
         "Status": "Tila",
@@ -443,12 +443,14 @@
         "LearnWaysToParticipate": "Katso erilaisia tapoja %s osallistua%s",
         "ManuallySendEmailTo": "Ole hyvä ja lähetä viesti osoitteeseen",
         "PluginDescription": "Lähetä palautetta Piwikin tiimille. Jaa ideoita kanssamme!",
+        "RateFeatureLeaveMessageDislike": "Harmillista kuulla että et pidä siitä! Voisitko kertoa meille, miten voimme korjata tämän?",
         "RateFeatureThankYouTitle": "Kiitos '%s':n arvostelemisesta!",
         "SendFeedback": "Lähetä palaute",
         "SpecialRequest": "Onko sinulla erikoispyyntö Piwikin tiimille?",
         "ThankYou": "Kiitos että autat parantamaan Piwikiä!",
         "TopLinkTooltip": "Kerro meille mitä ajattelet, tai osta tukipalveluita (englanniksi).",
-        "VisitTheForums": "Käy %s foorumeilla %s"
+        "VisitTheForums": "Käy %s foorumeilla %s",
+        "WantToThankConsiderDonating": "Onko Piwik mielestäsi mainio, ja haluat kiittää meitä?"
     },
     "General": {
         "AbandonedCarts": "Hylätyt ostoskorit",
@@ -456,7 +458,7 @@
         "Action": "Toiminto",
         "Actions": "Toiminnot",
         "Add": "Lisää",
-        "AfterEntry": "saapumisen jäkleen",
+        "AfterEntry": "saapumisen jälkeen",
         "All": "Kaikki",
         "AllowPiwikArchivingToTriggerBrowser": "Salli arkistoinnin aloittaminen kun raportteja katsotaan selaimella",
         "AllWebsitesDashboard": "Kaikkien verkkosivujen työpöytä",
@@ -651,7 +653,7 @@
         "LastDays": "Edelliset %s päivää (sisältäen tämän päivän)",
         "LastDaysShort": "Edelliset %s päivää",
         "LayoutDirection": "ltr",
-        "Live": "Live",
+        "Live": "Reaaliaikainen",
         "Loading": "Ladataan...",
         "LoadingData": "Ladataan tietoja...",
         "LoadingPopover": "Ladataan %s...",
@@ -842,7 +844,7 @@
         "TransitionsRowActionTooltip": "Näe mitä kävijät tekivät ennen ja jälkeen tällä sivulla käymistä",
         "TransitionsRowActionTooltipTitle": "Avaa muutokset",
         "TranslatorEmail": "olli@jarva.fi, sara@alennuskoodia.fi",
-        "TranslatorName": "<a href=\"http:\/\/olli.jarva.fi\/\">Olli Jarva<\/a>, <a href=\"http:\/\/www.alennuskoodia.fi\">Sara<\/a>",
+        "TranslatorName": "<a href=\"http:\/\/olli.jarva.fi\/\">Olli Jarva<\/a>, Sara",
         "UniquePurchases": "Uniikit ostot",
         "Unknown": "Tuntematon",
         "Upload": "Lähetä",
@@ -991,6 +993,7 @@
         "PluginDescription": "Luo upeita staattisia PNG-kuvaajia mistä tahansa Piwikin raportista."
     },
     "Insights": {
+        "ControlComparedToDescription": "Kasvu verrattuna",
         "ControlFilterByDescription": "Näytä kaikki, vain siirtyneet, vain uudet tai vain kadonneet",
         "DayComparedToPreviousDay": "edellinen päivä",
         "DayComparedToPreviousWeek": "sama päivä edelliseltä viikolta",
@@ -1287,7 +1290,7 @@
         "Settings_PhoneNumbers_Help": "Ennen kuin voit saada raportteja puhelimeesi SMS-viesteinä (tekstiviesteinä), sinun täytyy antaa puhelinnumerosi alle.",
         "Settings_PhoneNumbers_HelpAdd": "Kun klikkaat \"Lisää\", puhelimeesi lähetetään SMS, joka sisältää koodin. Kirjaudu sisään Piwikiin, klikkaa Asetukset ja sitten Mobiiliviestintä. Kun olet antanut koodin, voit vastaanottaa raportteja puhelimeesi.",
         "Settings_PleaseSignUp": "Luodaksesi SMS raportteja ja vastaanottaaksesi tekstiviestejä verkkosivusi tilastoista, kirjaudu SMS API:n avulla ja merkitse tiedot alle.",
-        "Settings_SMSAPIAccount": "Hallinnoi SMS API tiliä",
+        "Settings_SMSAPIAccount": "Hallinnoi SMS API -tiliä",
         "Settings_SMSProvider": "SMS-toimittaja",
         "Settings_SuperAdmin": "Superkäyttäjäasetukset",
         "Settings_SuspiciousPhoneNumber": "Jos et saa tekstiviestiä, kokeile ottaa ensimmäinen nolla pois numerosta, eli %s",
@@ -1383,7 +1386,7 @@
         "Teaser": "Tällä sivulla voit kustomoida Piwikiä, jotta se noudattaa voimassaolevia lakeja ja säännöksiä. Voit %s anonymisoida vierailijoiden IP-osoitteita%s, %s poistaa vanhat lokit automaattisesti%s ja %s tarjota mahdollisuuden poistaa seuranta käytöstä sivullasi%s.",
         "TeaserHeadline": "Yksityisyysasetukset",
         "UseAnonymizedIpForVisitEnrichment": "Käytä piilotettuja IP-osoitteita myös käyntejä rikastettaessa.",
-        "UseAnonymizedIpForVisitEnrichmentNote": "Geopaikannuksen tapaiset liitännäiset IP-osoitteen ja tuottajan kautta parantavat kävijöiden metadataa. Nämä liitännäiset käyttävät oletuksena piilotettuja IP-osoitteita. Jos valitset \"Ei\", käytetään täysiä, ei-piilotettuja IP-osoitteita. Tämä vähentää yksityisyyttä, mutta parantaa datan tarkkuutta.",
+        "UseAnonymizedIpForVisitEnrichmentNote": "Geopaikannusliitännäiset parantavat käyttäjien metadataa. Nämä liitännäiset käyttävät oletuksena piilotettuja IP-osoitteita. Jos valitset \"Ei\", käytetään täysiä, ei-piilotettuja IP-osoitteita. Tämä vähentää yksityisyyttä, mutta parantaa datan tarkkuutta.",
         "UseAnonymizeIp": "Anonymisoi vierailijoiden IP-osoitteet",
         "UseDeleteLog": "Poista säännöllisesti vanhat käyttäjien lokit tietokannasta",
         "UseDeleteReports": "Poista vanhat raportit säännöllisesti."
@@ -1538,11 +1541,11 @@
     },
     "SEO": {
         "AlexaRank": "Alexa-tulos",
-        "Bing_IndexedPages": "Bing indeksoidut sivut",
+        "Bing_IndexedPages": "Bingin indeksoidut sivut",
         "Dmoz": "DMOZ tulossivut",
         "DomainAge": "Sivun ikä",
         "ExternalBacklinks": "Ulkoiset paluulinkit (Majestic)",
-        "Google_IndexedPages": "Google indeksoidut sivut",
+        "Google_IndexedPages": "Googlen indeksoimat sivut",
         "Rank": "Sijoitus",
         "ReferrerDomains": "Viittaavat domainit (Majestic)",
         "SeoRankings": "SEO-tulos",
@@ -1646,7 +1649,7 @@
         "ToFollowingPages": "Sisäisille sivuille",
         "ToFollowingPagesInline": "%s sisäisille sivuille",
         "ToFollowingSiteSearches": "Sisäisiä hakuja",
-        "ToFollowingSiteSearchesInline": "%s sisäist hakua",
+        "ToFollowingSiteSearchesInline": "%s sisäistä hakua",
         "XOfAllPageviews": "%s kaikista tämän sivun katseluista",
         "XOutOfYVisits": "%s (%s:stä)"
     },
@@ -1801,7 +1804,7 @@
         "country_jp": "Japani",
         "country_ke": "Kenia",
         "country_kg": "Kyrgyzstan",
-        "country_kh": "Kambodia",
+        "country_kh": "Kambodza",
         "country_ki": "Kiribati",
         "country_km": "Comoros",
         "country_kn": "Saint Kitts and Nevis",
@@ -1823,7 +1826,7 @@
         "country_ly": "Libya",
         "country_ma": "Marokko",
         "country_mc": "Monako",
-        "country_md": "Moldova, Republic of",
+        "country_md": "Moldovan tasavalta",
         "country_me": "Montenegro",
         "country_mf": "Saint Martin",
         "country_mg": "Madagaskar",
@@ -1847,7 +1850,7 @@
         "country_na": "Namibia",
         "country_nc": "Uusi Kaledonia",
         "country_ne": "Nigeria",
-        "country_nf": "Norfolk Island",
+        "country_nf": "Norfolk",
         "country_ng": "Nigeria",
         "country_ni": "Nicaragua",
         "country_nl": "Alankomaat",
@@ -1856,7 +1859,7 @@
         "country_nr": "Nauru",
         "country_nt": "Neutraali alue",
         "country_nu": "Niue",
-        "country_nz": "Uusi Seelanti",
+        "country_nz": "Uusi-Seelanti",
         "country_o1": "Muu maa",
         "country_om": "Oman",
         "country_pa": "Panama",
@@ -1869,18 +1872,18 @@
         "country_pm": "Saint Pierre and Miquelon",
         "country_pn": "Pitcairn",
         "country_pr": "Puerto Rico",
-        "country_ps": "Palestinian Territory",
+        "country_ps": "Palestiina",
         "country_pt": "Portugali",
         "country_pw": "Palau",
         "country_py": "Paraguay",
         "country_qa": "Qatar",
-        "country_re": "Reunion Island",
+        "country_re": "Réunion",
         "country_ro": "Romania",
         "country_rs": "Serbia",
         "country_ru": "Venäjä",
         "country_rw": "Ruanda",
         "country_sa": "Saudiarabia",
-        "country_sb": "Solomon Islands",
+        "country_sb": "Solomonsaaret",
         "country_sc": "Seychelles",
         "country_sd": "Sudan",
         "country_se": "Ruotsi",
@@ -1896,11 +1899,11 @@
         "country_so": "Somalia",
         "country_sr": "Suriname",
         "country_ss": "Etelä-Sudan",
-        "country_st": "Sao Tome and Principe",
+        "country_st": "São Tomé ja Príncipe",
         "country_su": "Entinen Neuvostoliitto",
         "country_sv": "El Salvador",
         "country_sx": "Sint Maarten",
-        "country_sy": "Syrian Arab Republic",
+        "country_sy": "Syyria",
         "country_sz": "Swasimaa",
         "country_ta": "Tristan da Cunha",
         "country_tc": "Turks and Caicos Islands",
@@ -1931,8 +1934,8 @@
         "country_va": "Vatikaani",
         "country_vc": "Saint Vincent and the Grenadines",
         "country_ve": "Venetsuela",
-        "country_vg": "Virgin Islands, British",
-        "country_vi": "Virgin Islands, U.S.",
+        "country_vg": "Neitsytsaaret, Britit",
+        "country_vi": "Neitsytsaaret (US)",
         "country_vn": "Vietnam",
         "country_vu": "Vanuatu",
         "country_wf": "Wallis and Futuna",
@@ -1989,7 +1992,7 @@
         "HowToSetupGeoIP_Step3": "Lataa tämä sivu uudestaan. %1$sGeoIP (PHP)%2$s palvelu on nyt %3$sasennettu%4$s. Valitse se.",
         "HowToSetupGeoIP_Step4": "Olet valmis! Olet juuri asentanut Piwikiin GeoIP:n, mikä tarkoittaa, että näet miltä alueilta ja mistä kaupungeista kävijäsi tulevat, sekä lisäksi hyvin tarkkaa maakohtaista tietoa.",
         "HowToSetupGeoIPIntro": "Vaikuttaa, ettei sinulla ole tarkkaa Geopaikannus asennusta. Ilman tätä hyödyllistä toimintoa et näe tarkkoja tietoja kävijöidesi sijannista. Näin voit aloittaa Geopaikannuksen käytön nopeasti:",
-        "HttpServerModule": "HTTP palvelin moduuli",
+        "HttpServerModule": "HTTP-palvelimen moduuli",
         "InvalidGeoIPUpdatePeriod": "Epäkelpo ajanjakso GeoIP päivityksille: %1$s. Pätevät arvot ovat %2$s.",
         "IPurchasedGeoIPDBs": "Olen ostanut %1$starkempia tietokantoja MaxMind:lta%2$s ja haluan asettaa automaattiset päivitykset.",
         "ISPDatabase": "ISP:n tietokanta",
@@ -2228,7 +2231,7 @@
         "Language_ts": "tsonga",
         "Language_tt": "tatar",
         "Language_tw": "twi",
-        "Language_ty": "tahitian",
+        "Language_ty": "tahiti",
         "Language_ug": "uighur",
         "Language_uk": "ukrainan kieli",
         "Language_ur": "urdu",
