--- a/lang/ja.json
+++ b/lang/ja.json
@@ -268,6 +268,7 @@
         "PluginsManagement": "プラグインの管理",
         "PluginWebsite": "プラグインのウェブサイト",
         "Screenshots": "スクリーンショット",
+        "SortByAlpha": "アルファ",
         "SortByNewest": "最新",
         "SortByPopular": "人気",
         "Status": "状態",
@@ -353,8 +354,10 @@
         "AddAWidget": "ウィジェットの追加",
         "AddPreviewedWidget": "プレビューされたウィジェットをダッシュボードに追加します",
         "ChangeDashboardLayout": "ダッシュボードのレイアウトを変更する",
+        "CopyDashboardToUser": "ダッシュボードをユーザーへコピーする",
         "CreateNewDashboard": "新規ダッシュボードの作成",
         "Dashboard": "ダッシュボード",
+        "DashboardCopied": "現在のダッシュボードは選択したユーザーへコピーされました。",
         "DashboardEmptyNotification": "ダッシュボードには一つもウィジェットがありません。ダッシュボードにウィジェットを追加するか、あるいはダッシュボードをデフォルトのウィジェットにリセットしてから始めてください。",
         "DashboardName": "ダッシュボード名:",
         "DashboardOf": "%s のダッシュボード",
@@ -377,6 +380,7 @@
         "SetAsDefaultWidgets": "デフォルトのウィジェットとして設定する",
         "SetAsDefaultWidgetsConfirm": "現在のウィジェットとダッシュボードのレイアウトをデフォルトのテンプレートとして設定しますか？",
         "SetAsDefaultWidgetsConfirmHelp": "これらのウィジェットとダッシュボードのレイアウトは、新規ダッシュボードの作成時か、あるいは %s 機能の使用時に使われれます。",
+        "TopLinkTooltip": "%s のウェブ解析レポートを表示",
         "WidgetNotFound": "ウィジェットが見つかりませんでした",
         "WidgetPreview": "ウィジェットのプレビュー",
         "WidgetsAndDashboard": "ウィジェットとダッシュボード"
@@ -484,6 +488,7 @@
         "DailyReports": "日次レポート",
         "DailySum": "日計",
         "DashboardForASpecificWebsite": "特定ウェブサイトのダッシュボード",
+        "DataForThisTagCloudHasBeenPurged": "このタグクラウドのデータは、%s ヶ月以上経過しているためパージされました。",
         "Date": "日付",
         "DateRange": "期間：",
         "DateRangeFrom": "From",
@@ -515,6 +520,7 @@
         "Donate": "寄付",
         "Done": "完了",
         "Download": "ダウンロード",
+        "DownloadFail_FileExists": "%s のファイルは既に存在しています！",
         "DownloadFullVersion": "フルバージョンを%1$sダウンロード%2$s！ %3$s を確認してください",
         "Downloads": "ダウンロード数",
         "EcommerceOrders": "eコマース受注",
@@ -548,6 +554,7 @@
         "ExceptionUnableToStartSession": "セッションを開始できません",
         "ExceptionUndeletableFile": "%s が削除できませんでした",
         "ExceptionUnreadableFileDisabledMethod": "設定ファイル {%s} を読み込むことができませんでした。 サーバーで %s が無効化されている可能性があります。",
+        "ExpandDataTableFooter": "ビジュアルの変更やレポートの設定",
         "Export": "エクスポート",
         "ExportAsImage": "画像としてエクスポートする",
         "ExportThisReport": "他のフォーマットでこのデータセットをエクスポートする",
@@ -690,6 +697,7 @@
         "RelatedReports": "関連リポート",
         "Remove": "削除",
         "Report": "リポート",
+        "ReportGeneratedFrom": "このレポートは、%s のデータを使用して生成しました。",
         "Reports": "リポート",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "今日のリポート（または今日を含む、他の日付範囲）が生成される間隔は",
         "ReportsWillBeProcessedAtMostEveryHour": "従って、リポートは1時間ごとに処理されます。",
@@ -697,6 +705,7 @@
         "Required": "%s は必須です",
         "ReturningVisitor": "リピーター",
         "ReturningVisitorAllVisits": "すべてのビジットを表示",
+        "RowEvolutionRowActionTooltip": "この行のメトリックは、時間の経過と共にどのように変化したかを確認できます",
         "RowEvolutionRowActionTooltipTitle": "折れ線グラフをみる",
         "Rows": "列",
         "RowsToDisplay": "表示項目",
@@ -731,6 +740,7 @@
         "ShortMonth_8": "8月",
         "ShortMonth_9": "9月",
         "Show": "見る",
+        "SingleWebsitesDashboard": "単一ウェブサイトのダッシュボード",
         "SmallTrafficYouCanLeaveDefault": "トラフィックの少ないウェブサイトでは、デフォルトの %s 秒の設定で、リアルタイムにすべてのリポートにアクセス可能です。",
         "SmtpEncryption": "SMTP の暗号化",
         "SmtpPassword": "SMTP のパスワード",
@@ -1068,7 +1078,7 @@
         "DeleteReportsInfo3": "\"%s\" を有効にすると、データは永久に失われます。",
         "DeleteReportsOlderThan": "この月数より古いリポートを削除",
         "DeleteSchedulingSettings": "スケジュール設定",
-        "DoNotTrack_Description": "「トラック（追跡）しない」機能は、ユーザーが訪問しないWebサイト(分析サービス、広告ネットワーク、ソーシャルプラットフォームを含む)によるトラッキングのオプトアウトを可能にするためのテクノロジーとポリシーの提言です。",
+        "DoNotTrack_Description": "「トラック（追跡）しない」機能は、ユーザーが訪問しないウェブサイト(分析サービス、広告ネットワーク、ソーシャルプラットフォームを含む)によるトラッキングのオプトアウトを可能にするためのテクノロジーとポリシーの提言です。",
         "DoNotTrack_Disable": "「トラック（追跡）しない」機能のサポートを無効にする",
         "DoNotTrack_Disabled": "Piwikは現在、ブラウザで\"私は追跡されたくない\"と指定された場合であっても、すべてのビジターをトラック（追跡）しています。",
         "DoNotTrack_DisabledMoreInfo": "ビジターのプライバシーを尊重し、「トラック（追跡）しない」機能のサポートを有効にすることをお勧めします。",
@@ -1172,6 +1182,7 @@
         "PluginDescription": "カスタムリポートを作成してダウンロードします。それらを、毎日、毎週または毎月メールで送信します。",
         "ReportFormat": "リポートのフォーマット",
         "ReportsIncluded": "リポートに含める情報",
+        "SegmentAppliedToReports": "セグメント '%s' はレポートに適用されました。",
         "SendReportNow": "ただちにリポートを送信",
         "SendReportTo": "リポートの送信先",
         "SentToMe": "自分宛に送信",
@@ -1182,7 +1193,30 @@
         "WeeklyScheduleHelp": "週間スケジュール： リポートは毎週月曜日に送信されます。"
     },
     "SegmentEditor": {
-        "SelectSegmentOfVisitors": "ビジターのセグメントを選択:"
+        "AddANDorORCondition": "%s の条件を追加",
+        "AddNewSegment": "新しいセグメントを追加",
+        "AreYouSureDeleteSegment": "このセグメントを削除してもよろしいですか？",
+        "AutoArchivePreProcessed": "セグメントレポートの事前処理（archive.php の cron 設定が必要）",
+        "AutoArchiveRealTime": "セグメントレポートをリアルタイムに処理",
+        "ChooseASegment": "セグメントを選択してください",
+        "DataAvailableAtLaterDate": "ご利用中のセグメント化した分析レポートは、後ほど利用できるようになります。ご迷惑をおかけして申し訳ございません。",
+        "DefaultAllVisits": "すべてのビジット",
+        "DragDropCondition": "左のメニューから条件をドラッグ&ドロップしてください",
+        "LoadingSegmentedDataMayTakeSomeTime": "ビジターデータのセグメント処理には、数分かかることがあります...",
+        "OperatorAND": "AND（および）",
+        "OperatorOR": "OR（または）",
+        "SaveAndApply": "適用",
+        "SegmentDisplayedAllWebsites": "全ウェブサイト",
+        "SegmentDisplayedThisWebsiteOnly": "このウェブサイトのみ",
+        "SegmentIsDisplayedForWebsite": "表示対象の選択：",
+        "SegmentNotApplied": "セグメント '%s' が適用されませんでした",
+        "SegmentNotAppliedMessage": "カスタムセグメント '%s' のデータをリクエストしました。この Piwik の構成は現在、パフォーマンス上の理由からレポートのリアルタイム処理をおこないません。",
+        "SelectSegmentOfVisitors": "ビジターのセグメントを選択:",
+        "ThisSegmentIsVisibleTo": "このセグメント設定の表示：",
+        "VisibleToAllUsers": "すべてのユーザー",
+        "VisibleToMe": "自分",
+        "YouMayChangeSetting": "別の方法としては設定ファイル (%s) で設定を変更するか、このセグメント '%s' を選択し編集することができます。",
+        "YouMustBeLoggedInToCreateSegments": "ビジターのカスタムセグメントの作成と編集にはログインが必要です。"
     },
     "SEO": {
         "AlexaRank": "Alexa ランク",
@@ -1241,6 +1275,9 @@
         "WebsitesManagement": "ウェブサイトの管理",
         "YouCurrentlyHaveAccessToNWebsites": "現在 %s つのウェブサイトに接続しています。",
         "YourCurrentIpAddressIs": "あなたの現在の IP アドレスは %s です。"
+    },
+    "Transitions": {
+        "BouncesInline": "%s のバウンス"
     },
     "UserCountry": {
         "Continent": "大陸",
@@ -1527,9 +1564,18 @@
         "country_zr": "旧ザイール",
         "country_zw": "ジンバブエ",
         "DistinctCountries": "%s 個別の国々",
+        "GeoIPDatabases": "GeoIP データベース",
         "Geolocation": "ジオロケーション",
+        "ISPDatabase": "ISP データベース",
+        "Latitude": "緯度",
         "Location": "位置",
+        "LocationDatabase": "ロケーションデータベース",
+        "LocationProvider": "ロケーションプロバイダ",
+        "Longitude": "経度",
+        "Organization": "組織",
+        "OrgDatabase": "組織のデータベース",
         "PluginDescription": "ビジターの国をリポートします。",
+        "Region": "地域",
         "SubmenuLocations": "位置"
     },
     "UserCountryMap": {
