--- a/lang/pl.json
+++ b/lang/pl.json
@@ -151,6 +151,7 @@
         "CheckForUpdates": "Sprawdź aktualizacje",
         "Default": "domyślne",
         "DonateCall2": "Piwik potrzebuje Twojego ciągłego wsparcia by rosnąć i kwitnąć.",
+        "ExternalHelp": "Pomoc (otworzy się w nowym oknie)",
         "HowMuchIsPiwikWorth": "Ile Piwik jest warty dla Ciebie?",
         "InjectedHostEmailBody": "Witaj, próbowałem dostać się dzisiaj do Piwika i napotkałem ostrzeżenie o nieznanym hoście.",
         "JavascriptDisabled": "Aby użyć standardowego widoku Piwik, wymagane jest zezwolenie do działanie skryptów Java.<br \/>Wydaje się jednak, że tutaj JavaScript nie działa lub jest niepoprawnie wspierany przez twoją przeglądarkę.<br \/>By użyć standardowego widoku, włącz działanie JavaScript w opcjach swojej przeglądarki, i wtedy %1$sspróbuj ponownie%2$s.<br \/>",
@@ -180,6 +181,7 @@
         "ActionActivatePlugin": "Włącz plugin",
         "ActionActivateTheme": "Aktywuj szablon",
         "ActionInstall": "Zainstaluj",
+        "ActionUninstall": "Odinstaluj",
         "Activate": "Włącz",
         "Activated": "Aktywowano",
         "Active": "Aktywna",
