--- a/lang/en.json
+++ b/lang/en.json
@@ -1341,7 +1341,8 @@
         "Evolution": "Evolution",
         "LoadingWebsites": "Loading websites",
         "PluginDescription": "Displays multi-site executive summary\/statistics. Currently maintained as a core Piwik plugin.",
-        "TopLinkTooltip": "Compare Web Analytics stats for all of your Websites."
+        "TopLinkTooltip": "Compare Web Analytics stats for all of your Websites.",
+        "Pagination": "%s - %s of %s"
     },
     "Overlay": {
         "Clicks": "%s clicks",
