--- a/lang/en.json
+++ b/lang/en.json
@@ -1334,7 +1334,7 @@
         "Settings_VerificationCodeJustSent": "We just sent a SMS to this number with a code: please enter this code above and click \"Validate\".",
         "SettingsMenu": "Mobile Messaging",
         "SMS_Content_Too_Long": "[too long]",
-        "TopLinkTooltip": "Get Web Analytics Reports delivered to your email inbox or your mobile phone!",
+        "TopLinkTooltip": "Get Web Analytics Reports delivered to your email inbox or your mobile phone.",
         "TopMenu": "Email & SMS Reports",
         "VerificationText": "Code is %s. To validate your phone number and receive Piwik SMS reports please copy this code in the form accessible via Piwik > %s > %s."
     },
