use GNU/Linux instead of Linux

--- a/lang/en.json
+++ b/lang/en.json
@@ -1132,7 +1132,7 @@
         "SystemCheckOtherFunctions": "Other functions",
         "SystemCheckPackHelp": "The pack() function is required to track visitors in Piwik.",
         "SystemCheckParseIniFileHelp": "This built-in function has been disabled on your host. Piwik will attempt to emulate this function but may encounter further security restrictions. Tracker performance will also be impacted.",
-        "SystemCheckPdoAndMysqliHelp": "On a Linux server you can compile php with the following options: %1$s In your php.ini, add the following lines: %2$s",
+        "SystemCheckPdoAndMysqliHelp": "On a GNU/Linux server you can compile php with the following options: %1$s In your php.ini, add the following lines: %2$s",
         "SystemCheckPhp": "PHP version",
         "SystemCheckPhpPdoAndMysqli": "More information on: %1$sPHP PDO%2$s and %3$sMYSQLI%4$s.",
         "SystemCheckSplHelp": "You need to configure and rebuild PHP with the Standard PHP Library (SPL) enabled (by default).",
@@ -1149,7 +1149,7 @@
         "SystemCheckWarnSimpleXMLHelp": "You should enable the \"SimpleXML\" extension (e.g., install the \"php-simplexml\" and\/or \"php-xml\" package).",
         "SystemCheckWinPdoAndMysqliHelp": "On a Windows server you can add the following lines to your php.ini: %s",
         "SystemCheckWriteDirs": "Directories with write access",
-        "SystemCheckWriteDirsHelp": "To fix this error on your Linux system, try typing in the following command(s)",
+        "SystemCheckWriteDirsHelp": "To fix this error on your GNU/Linux system, try typing in the following command(s)",
         "SystemCheckZlibHelp": "You need to configure and rebuild PHP with \"zlib\" support enabled, --with-zlib.",
         "SystemCheckCronArchiveProcess": "Archive Cron",
         "SystemCheckCronArchiveProcessCLI": "Managing processes via CLI",
